add postgresql to the project
+ updated docker configuration
+ config module that reads a .env file
+ fastapi connects and closes connections properly

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,9 @@ dmypy.json
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
+
+
+
+# ignoring Pipfile's  files, as they are useful only for vscode linting
+Pipfile
+Pipfile.lock
