--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,6 @@ fastapi==0.61.1
 pydantic==1.6.1
 starlette==0.13.6
 uvicorn==0.11.8
+databases[postgresql]==0.3.2
+sqlalchemy==1.3.19
+alembic==1.4.3
