--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 
 services:
   server:
@@ -13,3 +13,17 @@ services:
       - ./backend/.env
     ports:
       - 8000:8000
+    depends_on:
+      - db
+
+  db:
+    image: postgres:12.4-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./backend/.env
+    ports:
+      - 5432:5432
+
+volumes:
+    postgres_data:
