--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# packages needed for the application
 fastapi==0.61.1
 pydantic==1.6.1
 starlette==0.13.6
@@ -5,3 +6,12 @@ uvicorn==0.11.8
 databases[postgresql]==0.3.2
 sqlalchemy==1.3.19
 alembic==1.4.3
+
+
+# packages needed for development
+pytest==6.0.2
+pytest-asyncio==0.14.0
+pytest-xdist==2.1.0
+httpx==0.15.2
+asgi-lifespan==1.0.1
+docker==4.3.1
