--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,8 @@ starlette==0.13.6
 uvicorn==0.11.8
 databases[postgresql]==0.3.2
 sqlalchemy==1.3.19
+email-validator==1.1.1
 alembic==1.4.3
-
 
 # packages needed for development
 pytest==6.0.2
